--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1345,14 +1345,19 @@ if __name__ == "__main__":
 
 \paragraph{} Now if we call \url{localhost:5000/hello/simon} then we should instead see this rendered template:
 
-%%% INSERT RENDERED TEMPLATE SCREENSHOT
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\textwidth]{images/flask_template_basic}
+\caption{Rendered HTML with a very simple template \& a single parameter}
+\label{fig:flask_template_basic}
+\end{figure}
 
 \paragraph{} We can also use Jinja2 templates to perform conditional behaviours, for example, rendering our HTML differently depending upon the data that is passed in. This lets us do things like personalise a page if we have a person's name or else provide a default generic page if we don't. Let's look at the template (conditional.html) for such a scenario:
 
 \begin{lstlisting}
 <!doctype html>
-{% if user %}
-    <h1>Hello {{ user.name }}!</h1>
+{% if name %}
+    <h1>Hello {{ name }}!</h1>
 {% else %}
     <h1>Hello from Napier!</h1>
 {% endif %}
@@ -1368,8 +1373,7 @@ app = Flask(__name__)
 @app.route('/hello/')
 @app.route('/hello/<name>')
 def hello(name=None):
-    user = {'name': name}
-    return render_template('conditional.html', user=user)
+    return render_template('conditional.html', name=name)
 
 if __name__ == "__main__":
     app.run(host='0.0.0.0', debug=True)
@@ -1384,11 +1388,21 @@ if __name__ == "__main__":
 
 \paragraph{} If we now call \url{localhost:5000/hello} then we should see the following:
 
-%%% INSERT RENDERED TEMPLATE SCREENSHOT
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\textwidth]{images/flask-template-conditional-no-arg}
+\caption{Conditional template rendering without URL arguments}
+\label{fig:flask-template-conditional-no-arg}
+\end{figure}
 
 \paragraph{} But if we call \url{localhost:5000/hello/simon} then we should instead see this rendered template:
 
-%%% INSERT RENDERED TEMPLATE SCREENSHOT
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\textwidth]{images/flask-template-conditional-arg}
+\caption{Conditional template rendering with a single URL argument}
+\label{fig:flask-template-conditional-arg}
+\end{figure}
 
 %%% INSERT LOOPING DEMONSTRATION - HELLO CLASS LIST
 
