Add hidden section ready for including daybook case study

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1505,6 +1505,19 @@ if __name__ == "__main__":
 \end{comment}
 
 
+%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%
+% CASE STUDIES 
+%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%
+
+
+
+%\part{Case Studies}
+%\chapter{Daybook}
+%\label{daybook}
+%\paragraph{}
+
 
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
