User verbatim comments rather than commenting out

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1512,12 +1512,12 @@ if __name__ == "__main__":
 %%%%%%%%%%%%%%%%%
 
 
-
-%\part{Case Studies}
-%\chapter{Daybook}
-%\label{daybook}
-%\paragraph{}
-
+\begin{comment}
+\part{Case Studies}
+\chapter{Daybook}
+\label{daybook}
+\paragraph{}
+\end{comment}
 
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
