--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1303,6 +1303,9 @@ if __name__ == "__main__":
 
 \paragraph{} Jinja2 is a fully-fledged Python templating engine and is not dependent upon Flask. So if you were writing another app at some point in your career that outputs HTML pages then Jinja2 is a good option. For the moment though we shall use it exclusively with Flask.
 
+
+\subsection{Templates \& Tags}
+\label{templates-tags}
 \paragraph{} The process is simple. We supply HTML templates, in a template folder, then, in our functions we tell Flask which template to render and return to the client using the render\_template function. So we have a couple of setup tasks to do. First, create a templates folder in the same folder as your Python Flask app, e.g.
 
 \begin{lstlisting}[style=DOS]
@@ -1352,6 +1355,9 @@ if __name__ == "__main__":
 \label{fig:flask_template_basic}
 \end{figure}
 
+
+\subsection{Templates with Conditional Arguments}
+\label{templates-conditional}
 \paragraph{} We can also use Jinja2 templates to perform conditional behaviours, for example, rendering our HTML differently depending upon the data that is passed in. This lets us do things like personalise a page if we have a person's name or else provide a default generic page if we don't. Let's look at the template (conditional.html) for such a scenario:
 
 \begin{lstlisting}
@@ -1404,6 +1410,9 @@ if __name__ == "__main__":
 \label{fig:flask-template-conditional-arg}
 \end{figure}
 
+
+\subsection{Templates \& Collections}
+\label{templates-collections}
 \paragraph{} A very useful technique for generating HTML is to build a list or dictionary in Python then pass that collection into the template and cause the template to iterate over the elements of the collection. Let's look at a simple example now; here is a simple template that incorporates a Jinja2 looping construct:
 
 \begin{lstlisting}
@@ -1444,6 +1453,9 @@ if __name__ == "__main__":
 
 \paragraph{} By using simple looping techniques and carefully considering the data that we pass from our Python function into a template, we can generate complex and dynamic HTML layouts.
 
+
+\subsection{Template Inheritance}
+\label{template-inheritance}
 \paragraph{} Because multiple templates can also be used to define headers, footers, and any other sub-part of individual pages in your app this means you can easily change and manage the look and feel of your apps. This approach is called \emph{Template Inheritance} and means that you can, for example, define a header or menu-bar just once, e.g. in a template called menu.html and then include that template in every other pages which you want to display the menu. If you ever wish to add or remove a menu item then you only have to make a single edit to the menu template. Nice isn't it? This follows an established software design pattern of attempting to separate application logic separate from the presentation, markup or layout of data. Although you might ask, ``what about the logic in the template?'', you are correct, there is a little bit of overlap where logic directly concerns rendering the templates but for the most part, done correctly, all of the computation of your web-app should be done in Flask and the rendering into HTML is done separately in Jinja2. This is a pretty good balance I think.
 
 
